@startuml
'https://plantuml.com/sequence-diagram


note "Derniere seance Bibliothèque :\n- mettre en place un service membre\n- ajouter un livre\n - ajouter liste des livres uniquement titre-id\n\n pensez à optimiser requetes bdd pour alléger algos membre service\n - Pensez à utiliser des DTO" as N2


package "Existant"{

class BibliothequeController{

}
note top : BibliothequeController utilise un service dédié à la gestion des auteurs.\n il gere les endpoints\n il délègue la logique metier (e.g. rendre ou emprunter un livre)

BibliothequeController -> LivreService
BibliothequeController --> AuteurService

interface MembreDAO{}
'MembreDAO <-- MembreService
'MembreService <-- BibliothequeController
MembreService .> Membre : utilise

LivreService --> LivreDAO
LivreService .> Livre : Utilise


interface AuteurService{
     void ajouterAuteur(String nom, String dateNaissance, String dateDeces);
     List<Auteur> consulterLesAuteurs();
     Auteur detailsAuteur(int id);
    List<Auteur> rechercheParNom(String );
    int nombreAuteurs();
}

note left : AuteurService maitrise la logique métier\n et délèque le stockage à  auteurDAO\n il sauvegarde, accede à l'inforamtion\nIl n'est pas interssé par COMMENT c'est fait

AuteurService --> AuteurDAO

interface AuteurDAO{
     void add(Auteur a);
     List<Auteur> findAll();
     Auteur findByID(int id);
    // Optional<Auteur> maybeFindByID(int id);

      int size();

      List<Auteur> findBytNom(String nom);
}

note left : AuteurDAO a pour but de gérer le stockage de l'information\n il peut être réalisé par différentres implémentation techniques\nList, fichier, SQL, noSQL, API ...


class Livre {
    - ISBN: String
    - titre: String
    - anneePublication: int
    - auteur : Auteur

    + getDescription(): String
}

class Auteur {
- nom: String
- naissance
- mort

+ getDescription(): String
}

class Membre {
    nom: String
    dateAbonnement : String
}


Livre ->  Auteur : auteur
Auteur -> Livre : livres*

Membre --> Livre  : emprunts*

note "Requêtes utiles pour une bibliotèque\n- récupérer tous les livres\n- récupérer un lire (id)\n- chercher par titre\n- listes des auteurs représentés\n- récupérer un auteur (id)\n- chercher auteur (nom)\n- récupérer la liste des livres d'un auteur\n\nPour admin : \n- connaitre liste membres\n- connaitre livres empruntés par un membre\n- liste des livres disponibles ? \n- qui a emprunté ce livre ?\n- ajouter un nouveau livre\n- emprunter un livre\n- retour livre" as N1

}
@enduml